--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,10 +1,5 @@
-header {
-    height: 500px;
-    background: linear-gradient(0deg, rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url("../img/header.jpg") no-repeat center;
-    /* min-width: 100%;
-    min-height: 100%; */
-    background-size: cover;
-    color: #FFFFFF;
+.background-header-image {
+    background: url(../img/header.jpg) center center;
 }
 
 /* 
@@ -13,20 +8,12 @@ header {
         0deg car habituellement, dégradé de gauche à droite 
 */
 
-nav {
-    border-bottom: 0.5px solid #FFFFFF;
+header img {
+    width: 150px;
 }
 
-nav h2 {
-    margin-bottom: 0;
-}
-
-.logo {
-    width: 100px;
-}
-
-img {
-    width: 100%;
+#footer {
+    background-color: black;
 }
 
 /* les icônes se comportent comme du texte. pour modifier leurs tailles, on utilise font-size */
